--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "sqlite-json": "^1.1.0"
   },
   "scripts": {
