--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "sqlite-json": "^1.1.0"
   },
   "scripts": {
